--- a/doc/Install.adoc
+++ b/doc/Install.adoc
@@ -35,7 +35,7 @@ export PATH=$PATH:$JAVA_HOME/bin:.
 ----
 java -version
 ----
-La console devrait afficher la version de java installé :
+La console devrait afficher la version de java installée :
 ----
 openjdk version "1.8.0_191"
 OpenJDK Runtime Environment (build 1.8.0_191-b12)
@@ -44,11 +44,87 @@ OpenJDK 64-Bit Server VM (build 25.191-b12, mixed mode)
 
 === Installer Maven 3
 
+* Télécharger l'archive apache-maven-3.x.0-bin.tar.gz en suivant le lien : link:https://maven.apache.org/download.cgi[Télécharger Maven]
+* Ouvrir un terminal et extraire l'archive dans /opt/ :
+[source, bash]
+----
+cd /opt
+sudo tar -xvzf ~/Downloads/apache-maven-3.x.0-bin.tar.gz
+----
+
+* Ajouter la variable M2_HOME dans le fichier ~/.bashrc
+[source, bash]
+----
+export M2_HOME=/opt/apache-maven-3.x.0
+export MAVEN_HOME=/opt/apache-maven-3.x.0/bin
+export PATH=$PATH:$JAVA_HOME/bin:$MAVEN_HOME:.
+----
+* Mettre à jour les commandes maven
+[source, bash]
+----
+sudo update-alternatives --install "/usr/bin/mvn" "mvn" "/opt/apache-maven-3.x.0/bin/mvn" 0
+sudo update-alternatives --set mvn /opt/apache-maven-3.x.0/bin/mvn
+----
+
+* Tester l'intallation en ouvrant un terminal et en tapant :
+[source, bash]
+----
+mvn --version
+----
+La console devrait afficher la version de maven & java installée :
+----
+Maven home: /opt/apache-maven-3.6.0
+Java version: 1.8.0_191, vendor: Oracle Corporation, runtime: /usr/lib/jvm/jdk1.8.0_191/jre
+Default locale: fr_FR, platform encoding: UTF-8
+OS name: "linux", version: "4.19.2-200.fc28.x86_64", arch: "amd64", family: "unix"
+----
+
+=== Installer Git
+* Dans un terminal, taper :
+[source, bash]
+----
+sudo yum install git-core
+----
+
+* Tester l'intallation en ouvrant un terminal et en tapant :
+[source, bash]
+----
+git --version
+----
+La console devrait afficher la version de maven & java installée :
+----
+git version 3.xx.x
+----
+
 === Installer Jenkins
+* Ajouter le depot jenkins aux depots yum autorisés et installer la version stable de jenkins :
+[source, bash]
+----
+sudo wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat-stable/jenkins.repo
+sudo rpm --import https://jenkins-ci.org/redhat/jenkins-ci.org.key
+sudo yum install jenkins
+----
 
+=== Installer les web drivers pour Selenium
+- Chrome driver
+* Télécharger la dernière version de chrome driver link:https://sites.google.com/a/chromium.org/chromedriver/[ici]
+* Choisir la version `chromedriver_linux64.zip`
+* Extraire l'archive dans `/opt`
+*  Ajouter la variable CHROME_DRIVER dans le fichier ~/.bashrc
+[source, bash]
+----
+export CHROME_DRIVER=/opt/chromedriver_linux64
+export PATH=$PATH:$JAVA_HOME/bin:$MAVEN_HOME:$CHROME_DRIVER:.
+----
 
-- chrome driver
-
-- java
-
-- maven
+- Firefox driver
+* Télécharger la dernière version de geckodriver link:https://github.com/mozilla/geckodriver/[ici]
+* Cliquer sur le lien `Releases`
+* Choisir la version `geckodriver-v0.23.0-linux64.tar.gz`
+* Extraire l'archive dans `/opt`
+*  Ajouter la variable FIREFOX_DRIVER dans le fichier ~/.bashrc
+[source, bash]
+----
+export FIREFOX_DRIVER=/opt/geckodriver
+export PATH=$PATH:$JAVA_HOME/bin:$MAVEN_HOME:$CHROME_DRIVER:$FIREFOX_DRIVER:.
+----
